[gd_scene load_steps=6 format=3 uid="uid://c4n4wtt105ijr"]

[ext_resource type="Script" path="res://Enemies/Scripts/Goomba.gd" id="1_2idse"]
[ext_resource type="SpriteFrames" uid="uid://bv6emqfpdbmv8" path="res://Enemies/Goomba_SpriteFrames.tres" id="2_53a5j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yfxq"]
size = Vector2(7, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pxtt"]
size = Vector2(16, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u66c1"]
size = Vector2(16, 3)

[node name="Goomba" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 4
script = ExtResource("1_2idse")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = ExtResource("2_53a5j")
frame_progress = 0.0595651

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_1yfxq")

[node name="DamageArea2D" type="Area2D" parent="."]
position = Vector2(0, -6.5)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="DamageShape2D" type="CollisionShape2D" parent="DamageArea2D"]
shape = SubResource("RectangleShape2D_0pxtt")

[node name="HitArea2D" type="Area2D" parent="."]
position = Vector2(0, -14.5)
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="HitShape2D" type="CollisionShape2D" parent="HitArea2D"]
shape = SubResource("RectangleShape2D_u66c1")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="DamageArea2D" to="." method="_on_damage_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
